# POO2

./: .gitignore  alteracao estrangeira1.txt  alteracao estrangeira2.txt  comandos git.txt  tela_de_login.ui  teste.txt
atividades-do-lucas/comunicacaoEmRede/: cliente.py  servidor.py
atividades-do-lucas/multithreading/: cliente.py  multithread.py  multithread_socket_server.py
atividades-do-lucas/pyqt5/: CadastrarTela.py  Cadastro.py  buscarTela.ui
banco/: Banco.py  Cliente.py  Conta.py  Historico.py  banco.py  main_multitela.py  poo003.ipynb  tela_de_cadastro.py  tela_de_cadastro.ui  tela_de_depositar.py  tela_de_depositar.ui  tela_de_extrato.py  tela_de_extrato.ui  tela_de_login.py  tela_de_login.ui  tela_de_saque.py  tela_de_saque.ui  tela_de_transferir.py  tela_de_transferir.ui  tela_inicial.py  tela_inicial.ui  tela_principal.py  tela_principal.ui
banco/cliente/: Cliente.py  main_multitela.py  (+12 more)
banco_documentacion_sphinx/: Banco.py  Cliente.py  Conta.py  Historico.py  tela_de_cadastro.py  tela_de_depositar.py  tela_de_extrato.py  tela_de_saque.py  tela_inicial.py  tela_principal.py
comunicacaoEmRede/: cliente.py  servidor.py
pacote/: ImagemBinaria.py
pacote/ImagemBinaria/: LICENSE.txt  README.md  setup.cfg
pacote/ImagemBinaria/src/ImagemBinaria/: ImagemBinaria.py
pacote/ImagemBinaria/src/ImagemBinaria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyqt5/: BarraDeProgresso.py  BuscarTela.py  Main.py  TelaPrincipal.py  VerTelasRapido.py  cadastrarTela.ui  cadastro.ui  cadastro_interface.py  telaPrincipal.ui  teste.py  teste.ui
(+54 files in other folders)
