[metadata]
name = ImagemBinaria
version = 0.0.7
author = Eurico Delmondes, Lucas Silva Lopes
author_email = lucaslopes072009@hotmail.com
description = Operations with Binary Images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucassl2020/POO2/tree/master/pacote
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

install_requires = 
    opencv-python >= 4.5.3
    numpy >= 1.19.2
     
[options.packages.find]
where = src